# trishul-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: ci.yml
examples/: README.md  sample_report.json
examples/plugins/: dir_listing.py
tests/: test_basic.py
trishul/: __init__.py  cli.py
trishul/core/: __init__.py  engine.py  http_client.py  models.py  response_analyzer.py
trishul/modules/: __init__.py  crawler.py  fuzz_engine.py  header_analyzer.py  port_scanner.py  ssl_analyzer.py  tech_detector.py
trishul/plugins/: __init__.py  base.py  loader.py  open_redirect.py  sqli_detector.py  xss_detector.py
trishul/reporters/: __init__.py  cli_reporter.py  html_reporter.py  json_reporter.py
trishul/templates/: report.html.j2
